--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config --inspect=9993 src/index.ts"
+    "start": "nodemon -r dotenv/config --inspect=8080 src/index.ts",
+    "build": "ttsc -b tsconfig.build.json"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,26 @@
   },
   "homepage": "https://github.com/fethca/nova-boop#readme",
   "dependencies": {
+    "@types/jest": "^28.1.3",
+    "@types/node": "^13.5.2",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "envalid": "^7.3.1",
     "eslint": "^8.15.0",
+    "ioredis": "4.27.2",
+    "ioredis-mock": "5.5.5",
+    "jest": "^28.1.1",
+    "moment": "^2.29.3",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
-    "puppeteer": "^14.1.0",
-    "typescript": "^4.6.4"
+    "puppeteer": "^15.4.0",
+    "spotify-web-api-node": "^5.0.2",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.0",
+    "ttypescript": "^1.5.13",
+    "typescript": "^4.6.4",
+    "typescript-transform-paths": "^3.3.1",
+    "winston": "^3.8.0",
+    "winston-transport": "^4.5.0"
   }
 }
