--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "puppeteer": "^15.4.0",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-block-resources": "^2.4.2",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.0",
     "spotify-web-api-node": "^5.0.2",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.0",
