--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/jest": "^28.1.3",
     "@types/node": "^13.5.2",
+    "@types/random-useragent": "^0.3.1",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
@@ -36,6 +37,7 @@
     "puppeteer-extra-plugin-block-resources": "^2.4.2",
     "puppeteer-extra-plugin-recaptcha": "^3.6.6",
     "puppeteer-extra-plugin-stealth": "^2.11.0",
+    "random-useragent": "^0.5.0",
     "spotify-web-api-node": "^5.0.2",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.0",
