--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/fethca/nova-boop#readme",
   "dependencies": {
     "@types/jest": "^28.1.3",
+    "@types/jsdom": "^20.0.0",
     "@types/node": "^13.5.2",
     "@types/random-useragent": "^0.3.1",
     "axios": "^0.27.2",
@@ -29,6 +30,7 @@
     "ioredis": "4.27.2",
     "ioredis-mock": "5.5.5",
     "jest": "^28.1.1",
+    "jsdom": "^20.0.0",
     "moment": "^2.29.3",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
