fix: puppeteer chrome fail

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "htmlparser2": "^9.1.0",
     "ioredis": "5.3.2",
     "latinize": "^2.0.0",
+    "locate-chrome": "^0.1.1",
     "lodash.isequal": "^4.5.0",
     "lodash.uniqwith": "^4.5.0",
     "moment": "^2.30.1",
@@ -51,6 +52,7 @@
     "@fethcat/tests": "^0.0.10",
     "@fethcat/version": "^0.0.8",
     "@types/latinize": "^0.2.18",
+    "@types/locate-chrome": "^0.1.2",
     "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.uniqwith": "^4.5.9",
     "@types/node": "^20.3.0",
