--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "locate-chrome": "^0.1.1",
     "lodash.isequal": "^4.5.0",
     "lodash.uniqwith": "^4.5.0",
-    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "puppeteer": "^22.4.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-block-resources": "^2.4.3",
