--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "locate-chrome": "^0.1.1",
     "lodash.isequal": "^4.5.0",
     "lodash.uniqwith": "^4.5.0",
-    "moment-timezone": "^0.5.45",
+    "luxon": "^3.4.4",
     "puppeteer": "^22.4.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-block-resources": "^2.4.3",
@@ -55,6 +55,7 @@
     "@types/locate-chrome": "^0.1.2",
     "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.uniqwith": "^4.5.9",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.3.0",
     "@types/random-useragent": "^0.3.3",
     "@types/spotify-web-api-node": "^5.0.11",
