--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint \"{src,tests}/**/*.{ts,tsx}\"",
     "test:unit": "vitest run --coverage",
     "start:dev": "nodemon -r dotenv/config --inspect=9999 src/index.ts",
-    "version:patch": "version patch",
-    "version:minor": "version minor",
-    "version:major": "version major"
+    "version:patch": "version-fethca patch",
+    "version:minor": "version-fethca minor",
+    "version:major": "version-fethca major"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/fethca/nova-boop#readme",
   "dependencies": {
-    "@fethcat/logger": "^1.0.1",
+    "@fethcat/logger": "^1.0.2",
     "@fethcat/shared": "^0.0.3",
     "@fethcat/store": "^0.0.2",
     "@fethcat/validator": "^0.0.5",
     "@vitest/coverage-v8": "^1.4.0",
     "axios": "^1.6.8",
+    "domutils": "^3.1.0",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "fuse.js": "^7.0.0",
@@ -40,33 +41,34 @@
     "lodash.isequal": "^4.5.0",
     "lodash.uniqwith": "^4.5.0",
     "luxon": "^3.4.4",
-    "puppeteer": "^22.6.1",
+    "puppeteer": "^22.6.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-block-resources": "^2.4.3",
     "puppeteer-extra-plugin-recaptcha": "^3.6.8",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "random-useragent": "^0.5.0",
     "spotify-web-api-node": "^5.0.2",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@fethcat/eslint-plugin": "^0.0.3",
     "@fethcat/prettier-config": "^1.0.5",
     "@fethcat/tests": "^0.0.15",
-    "@fethcat/version": "^0.0.9",
+    "@fethcat/version": "^0.0.11",
     "@types/latinize": "^0.2.18",
     "@types/locate-chrome": "^0.1.2",
     "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.uniqwith": "^4.5.9",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.12.4",
     "@types/random-useragent": "^0.3.3",
     "@types/spotify-web-api-node": "^5.0.11",
     "mockdate": "^3.0.5",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "puppeteer-extra-plugin": "^3.2.3",
-    "tsx": "^4.7.1",
+    "tsx": "^4.7.2",
     "typescript": "^5.4.3"
   },
   "prettier": "@fethcat/prettier-config",
